# hubspot-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  _client.py  main.py  server.py
src/hubspot/: __init__.py  config.py  tools.py  types.py
