[project]
name = "dedalus-labs-hubspot-mcp"
version = "0.1.0"
description = "Type 4 OAuth MCP server for HubSpot CRM API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dedalus-mcp>=0.7.0",
    "dedalus-labs>=0.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]